<resources>
    <string name="app_name">NumbersInterestingFact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_random_fact">Get random fact</string>
    <string name="get_fact">Get fact</string>
    <string name="number">Number</string>
    <string name="detail">Detail</string>
    <string name="enter_number">Enter the number</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="some_details__number">Some details of the number</string>
</resources>