<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_number_fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/margin_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:text="@string/number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_mini"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/tv_number_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/margin_small"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="@string/some_details__number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_mini"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/blue"/>

    <FrameLayout
        android:layout_margin="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="RtlHardcoded"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/blue_light"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_delete"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_baseline_delete_24"
            tools:ignore="RtlHardcoded"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/red_light"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_baseline_add_to_photos_24"
            tools:ignore="RtlHardcoded"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/green"/>

    </FrameLayout>


</LinearLayout>